add demo/simple-java